--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -3,147 +3,131 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ogólnopolski Rejestr Elektryków</title>
-
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<title>Wyszukiwarka elektryków</title>
 
 <style>
-:root {
-  --primary:#0B5FA5;
-  --bg:#f4f6f8;
-  --card:#ffffff;
-  --text:#1c1c1e;
-  --muted:#6b7280;
-}
-*{box-sizing:border-box}
-body{margin:0;font-family:Arial;background:var(--bg)}
-header{background:linear-gradient(135deg,#0B5FA5,#083f6b);color:white;padding:40px 20px}
-.header-container{max-width:1200px;margin:0 auto;display:flex;gap:20px;align-items:center}
-.logo{width:55px}
-main{max-width:1200px;margin:20px auto;padding:0 20px}
-.search-card,.results-card{background:white;border-radius:12px;padding:20px;box-shadow:0 6px 20px rgba(0,0,0,.08);margin-bottom:20px}
-.search-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:20px}
-select,button{width:100%;padding:12px;border-radius:8px;border:1px solid #d1d5db}
-button{background:#0B5FA5;color:white;font-weight:bold;border:none}
-table{width:100%;border-collapse:collapse}
-th,td{padding:12px;border-bottom:1px solid #e5e7eb}
-.empty{text-align:center;padding:20px;color:#6b7280}
-@media(max-width:600px){.header-container{flex-direction:column;align-items:flex-start}}
+body { font-family: Arial, sans-serif; padding:20px; }
+select, button { padding:10px; margin:5px 0; width:100%; }
+#results { margin-top:20px; }
+.card { border:1px solid #ccc; padding:10px; margin-bottom:10px; border-radius:6px; }
 </style>
 </head>
 
 <body>
 
-<header>
-  <div class="header-container">
-    <img src="/logo.png" class="logo">
-    <div>
-      <h1>Ogólnopolski Rejestr Elektryków</h1>
-      <p>Oficjalna wyszukiwarka certyfikowanych elektryków</p>
-    </div>
-  </div>
-</header>
+<h2>Wyszukaj elektryka</h2>
 
-<main>
+<select id="wojewodztwo">
+  <option value="">Wybierz województwo</option>
+</select>
 
-<div class="search-card">
-  <div class="search-grid">
-    <div>
-      <label>Województwo</label>
-      <select id="wojewodztwo"><option value="">-- wybierz --</option></select>
-    </div>
-    <div>
-      <label>Miasto</label>
-      <select id="miasto" disabled><option value="">-- wybierz --</option></select>
-    </div>
-    <div style="align-self:end">
-      <button onclick="szukaj()">Szukaj</button>
-    </div>
-  </div>
-</div>
+<select id="miasto">
+  <option value="">Wybierz miasto</option>
+</select>
 
-<div class="results-card">
-  <table>
-    <thead>
-      <tr><th>Imię</th><th>Nazwisko</th><th>Email</th><th>Telefon</th><th>Ocena</th></tr>
-    </thead>
-    <tbody id="wyniki"></tbody>
-  </table>
-  <div id="empty" class="empty">Wybierz województwo i miasto</div>
-</div>
+<button id="szukaj">Szukaj</button>
 
-</main>
+<div id="results"></div>
 
 <script type="module">
-import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm"
 
-const supabase = createClient(
- "https://tfbqqduxtsacvwfigsvt.supabase.co",
- "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
-)
+const supabaseUrl = "https://TWOJ_PROJECT.supabase.co"
+const supabaseKey = "TWOJ_PUBLIC_ANON_KEY"
 
-const woj = document.getElementById('wojewodztwo')
-const miasto = document.getElementById('miasto')
-const wyniki = document.getElementById('wyniki')
-const empty = document.getElementById('empty')
+const supabase = createClient(supabaseUrl, supabaseKey)
 
-// województwa
-const { data: wojData } = await supabase.from('wojewodztwa').select('id,nazwa').order('nazwa')
-wojData.forEach(w=>{
-  const o=document.createElement('option')
-  o.value=w.id
-  o.textContent=w.nazwa
-  woj.appendChild(o)
-})
+const wojSelect = document.getElementById("wojewodztwo")
+const miastoSelect = document.getElementById("miasto")
+const resultsDiv = document.getElementById("results")
 
-// miasta
-woj.addEventListener('change', async ()=>{
-  miasto.innerHTML='<option value="">-- wybierz --</option>'
-  miasto.disabled=true
-  if(!woj.value) return
+// -----------------------------
+// ZAŁADUJ WOJEWÓDZTWA
+// -----------------------------
+async function loadWojewodztwa(){
+  const { data, error } = await supabase
+    .from("wojewodztwa")
+    .select("id,nazwa")
+    .order("nazwa")
 
-  const { data } = await supabase.from('miasta')
-    .select('id,nazwa')
-    .eq('wojewodztwo_id', woj.value)
-    .order('nazwa')
+  if(error) return
 
-  data.forEach(m=>{
-    const o=document.createElement('option')
-    o.value=m.id
-    o.textContent=m.nazwa
-    miasto.appendChild(o)
+  data.forEach(w=>{
+    const opt = document.createElement("option")
+    opt.value = w.id
+    opt.textContent = w.nazwa
+    wojSelect.appendChild(opt)
   })
-  miasto.disabled=false
-})
-
-async function szukaj(){
-  wyniki.innerHTML=''
-  if(!woj.value||!miasto.value){empty.style.display='block';return}
-
-  // pobieramy NAZWY
-  const { data: wojN } = await supabase.from('wojewodztwa').select('nazwa').eq('id',woj.value).single()
-  const { data: miastoN } = await supabase.from('miasta').select('nazwa').eq('id',miasto.value).single()
-
-  const { data } = await supabase.from('tabela_elektrykow')
-    .select('imie,nazwisko,email,telefon,gwiazdki')
-    .eq('wojewodztwo', wojN.nazwa)
-    .eq('miasto', miastoN.nazwa)
-
-  if(!data || data.length===0){empty.style.display='block';return}
-
-  data.forEach(e=>{
-    wyniki.innerHTML+=`<tr>
-      <td>${e.imie}</td>
-      <td>${e.nazwisko}</td>
-      <td>${e.email}</td>
-      <td>${e.telefon}</td>
-      <td>${'★'.repeat(e.gwiazdki||0)}</td>
-    </tr>`
-  })
-  empty.style.display='none'
 }
 
-window.szukaj=szukaj
+loadWojewodztwa()
+
+// -----------------------------
+// ZMIANA WOJEWÓDZTWA → MIASTA
+// -----------------------------
+wojSelect.addEventListener("change", async ()=>{
+  const wojId = wojSelect.value
+  miastoSelect.innerHTML = "<option value=''>Wybierz miasto</option>"
+
+  if(!wojId) return
+
+  const { data, error } = await supabase
+    .from("miasta")
+    .select("id,nazwa")
+    .eq("wojewodztwo_id", wojId)
+    .order("nazwa")
+
+  if(error) return
+
+  data.forEach(m=>{
+    const opt = document.createElement("option")
+    opt.value = m.id
+    opt.textContent = m.nazwa
+    miastoSelect.appendChild(opt)
+  })
+})
+
+// -----------------------------
+// WYSZUKIWANIE
+// -----------------------------
+document.getElementById("szukaj").addEventListener("click", async ()=>{
+  resultsDiv.innerHTML = "Szukam..."
+
+  const wojId = wojSelect.value
+  const miastoId = miastoSelect.value
+
+  let query = supabase
+    .from("tabela_elektrykow")
+    .select("*")
+    .eq("status", "zweryfikowane")
+
+  if(wojId) query = query.eq("wojewodztwo_id", wojId)
+  if(miastoId) query = query.eq("miasto_id", miastoId)
+
+  const { data, error } = await query
+
+  if(error){
+    resultsDiv.innerHTML = "Błąd zapytania"
+    return
+  }
+
+  if(!data || data.length === 0){
+    resultsDiv.innerHTML = "Brak wyników"
+    return
+  }
+
+  resultsDiv.innerHTML = ""
+  data.forEach(e=>{
+    const div = document.createElement("div")
+    div.className="card"
+    div.innerHTML = `
+      <b>${e.imie} ${e.nazwisko}</b><br>
+      ${e.email}<br>
+      ${e.telefon}
+    `
+    resultsDiv.appendChild(div)
+  })
+})
 </script>
 
 </body>
