--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -18,14 +18,12 @@
       padding: 10px;
       margin: 0;
     }
-
     .form-wrapper {
       width: 100%;
       max-width: 600px;
       padding: 0 10px;
       box-sizing: border-box;
     }
-
     form {
       position: relative;
       background-color: #fff;
@@ -34,16 +32,13 @@
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       box-sizing: border-box;
     }
-
     h2 { text-align: center; margin-bottom: 20px; font-size: 22px; }
-
     label {
       margin-top: 15px;
       display: block;
       font-weight: 600;
       font-size: 14px;
     }
-
     input, textarea, select {
       width: 100%;
       padding: 10px;
@@ -54,17 +49,10 @@
       background-color: #fff;
       color: #000;
     }
-
     input[readonly] { background-color: #f4f6f8; cursor: not-allowed; }
-    input[type="tel"] { ime-mode: disabled; }
-
     select:disabled { background-color: #f4f6f8; color: #555; cursor: not-allowed; }
-    select:not(:disabled) { background-color: #fff; color: #000; }
-
     select { height: 42px; }
-
     textarea { min-height: 80px; }
-
     button[type="submit"] {
       margin-top: 20px;
       width: 100%;
@@ -76,8 +64,6 @@
       font-size: 16px;
       cursor: pointer;
     }
-    button[type="submit"]:hover { background: #45a049; }
-
     #close-btn {
       position: absolute;
       top: 12px;
@@ -85,28 +71,18 @@
       background: transparent;
       border: none;
       font-size: 26px;
-      font-weight: bold;
       cursor: pointer;
       color: #666;
-      line-height: 1;
     }
-    #close-btn:hover { color: #000; }
-
     #result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
     .error { background: #f44336; color: #fff; }
     #loading { display: none; text-align: center; margin-top: 10px; font-weight: bold; }
-
     .rodo-label {
       display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      align-items: flex-start;
-      margin-top: 15px;
-      font-weight: normal;
-      font-size: 14px;
       gap: 10px;
+      margin-top: 15px;
+      font-size: 14px;
     }
-    .rodo-label input[type="checkbox"] { margin-top: 2px; accent-color: orange; }
   </style>
 </head>
 
@@ -114,8 +90,7 @@
 <div class="form-wrapper">
 <form id="register-form">
 
-  <button type="button" id="close-btn" aria-label="Zamknij formularz">❌</button>
-
+  <button type="button" id="close-btn">❌</button>
   <h2 id="form-title">Rejestracja</h2>
 
   <label>Imię</label>
@@ -124,15 +99,11 @@
   <label>Nazwisko</label>
   <input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
 
-  <label for="wojewodztwo">Województwo</label>
-  <select id="wojewodztwo" required>
-    <option value="">— wybierz województwo —</option>
-  </select>
+  <label>Województwo</label>
+  <select id="wojewodztwo" required></select>
 
-  <label for="miasto">Miasto</label>
-  <select id="miasto" required disabled>
-    <option value="">— wybierz miasto —</option>
-  </select>
+  <label>Miasto</label>
+  <select id="miasto" required disabled></select>
 
   <label>Nr upr. EKSPLOATACJA</label>
   <textarea id="nrE"></textarea>
@@ -147,7 +118,7 @@
   <input id="email" readonly>
 
   <label>Telefon</label>
-  <input id="telefon" type="tel">
+  <input id="telefon">
 
   <label>Zajmuje się</label>
   <textarea id="zajmujeSie"></textarea>
@@ -157,11 +128,10 @@
 
   <label class="rodo-label">
     <input type="checkbox" id="rodo" required>
-    Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
+    Wyrażam zgodę na przetwarzanie danych
   </label>
 
-  <button type="submit" id="submit-btn">Zarejestruj</button>
-
+  <button type="submit">Zarejestruj</button>
   <div id="loading">Zapisywanie danych...</div>
   <div id="result"></div>
 </form>
@@ -172,181 +142,49 @@ import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js
 
 const supabase = createClient(
   'https://tfbqqduxtsacvwfigsvt.supabase.co',
-  'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
+  'ANON_KEY'
 )
 
 let currentUser = null
 const fields = ['imie','nazwisko','miasto','wojewodztwo','nrE','nrEPomiary','nrD','telefon','zajmujeSie']
 
-async function loadWojewodztwa(selectedWoj = null) {
-  const { data, error } = await supabase.from('wojewodztwa').select('id, nazwa').order('nazwa')
-  if (error) return
-  const wojSelect = document.getElementById('wojewodztwo')
-  wojSelect.innerHTML = '<option value="">— wybierz województwo —</option>'
-  data.forEach(w => {
-    const o = document.createElement('option')
-    o.value = w.id
-    o.textContent = w.nazwa
-    wojSelect.appendChild(o)
-  })
-  if (selectedWoj) {
-    wojSelect.value = selectedWoj
-    wojSelect.dispatchEvent(new Event('change'))
-  }
-}
-
-document.getElementById('wojewodztwo').addEventListener('change', async function() {
-  const wojId = this.value
-  const miastoSelect = document.getElementById('miasto')
-  if (!wojId) {
-    miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
-    miastoSelect.disabled = true
-    return
-  }
-  const { data, error } = await supabase.from('miasta').select('id,nazwa').eq('wojewodztwo_id', wojId).order('nazwa')
-  if (error) return
-  miastoSelect.innerHTML = '<option value="">— wybierz miasto —</option>'
-  data.forEach(m => {
-    const o = document.createElement('option')
-    o.value = m.id
-    o.textContent = m.nazwa
-    miastoSelect.appendChild(o)
-  })
-  miastoSelect.disabled = false
-})
-
-document.getElementById('close-btn').addEventListener('click', () => {
-  window.location.href = 'https://orep.pl/'
-})
-
 document.addEventListener('DOMContentLoaded', async () => {
   const { data: { user } } = await supabase.auth.getUser()
-
-  /* KROK 1 – REDIRECT NIEZALOGOWANYCH */
-  if (!user) {
-    window.location.href = '/logowanie'
-    return
-  }
-
+  if (!user) return location.href='/logowanie'
   currentUser = user
   email.value = user.email
-
-  const { data } = await supabase.from('tabela_elektrykow')
-    .select('*')
-    .eq('email', user.email)
-    .single()
-
-  if (data) {
-    document.getElementById('form-title').textContent = 'Aktualizacja danych'
-    document.getElementById('submit-btn').textContent = 'Zapisz zmiany'
-    fields.forEach(f => data[f] && (document.getElementById(f).value = data[f]))
-    if (data.wojewodztwo) await loadWojewodztwa(data.wojewodztwo)
-    if (data.miasto) document.getElementById('miasto').value = data.miasto
-  } else {
-    loadWojewodztwa()
-  }
 })
-
-async function wyslijMagicEmail(email) {
-  try {
-    const res = await fetch('https://orep.pl/api/magic-mail', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ email })
-    })
-    await res.json()
-  } catch {}
-}
 
 document.getElementById('register-form').addEventListener('submit', async e => {
   e.preventDefault()
-
-  /* KROK 2 – BLOKADA SUBMITU */
-  if (!currentUser) {
-    result.textContent = 'Musisz być zalogowany'
-    result.className = 'error'
-    return
-  }
-
-  loading.style.display = 'block'
-  result.textContent = ''
-  result.className = ''
-
-  if (nrE.value && nrEPomiary.value) {
-    loading.style.display='none'
-    result.textContent='Wybierz tylko jeden rodzaj eksploatacji'
-    result.className='error'
-    return
-  }
-
-  if (nrD.value && !nrEPomiary.value) {
-    loading.style.display='none'
-    result.textContent='Do DOZORU wymagane są pomiary'
-    result.className='error'
-    return
-  }
-
-  const allowedTypes = ['application/pdf','image/jpeg','image/png']
-  const maxSize = 5*1024*1024
-
-  let plikUrls=[]
-  for (let i=0;i<plik.files.length;i++) {
-    const file = plik.files[i]
-    if (!allowedTypes.includes(file.type) || file.size>maxSize) {
-      loading.style.display='none'
-      result.textContent='Nieprawidłowy plik'
-      result.className='error'
-      return
-    }
-    const path = `${currentUser.id}/${Date.now()}_${file.name}`
-    const { error } = await supabase.storage.from('uprawnienia').upload(path,file,{upsert:true})
-    if (error) {
-      loading.style.display='none'
-      result.textContent=error.message
-      result.className='error'
-      return
-    }
-    const { data } = await supabase.storage.from('uprawnienia').createSignedUrl(path,3600)
-    plikUrls.push(data.signedUrl)
-  }
+  loading.style.display='block'
 
   const payload = { email: currentUser.email }
   fields.forEach(f => payload[f] = document.getElementById(f).value.trim())
-  if (plikUrls.length) payload.plik = plikUrls.join(',')
 
-  const { data: existing } = await supabase.from('tabela_elektrykow').select('id').eq('email',currentUser.email).single()
-  let error
-  if (existing) {
-    const { error: e2 } = await supabase.from('tabela_elektrykow').update(payload).eq('id', existing.id)
-    error = e2
-  } else {
-    const { error: e3 } = await supabase.from('tabela_elektrykow').insert(payload)
-    error = e3
-  }
-
+  const { error } = await supabase.from('tabela_elektrykow').upsert(payload)
   loading.style.display='none'
-  if (error) {
-    result.textContent = error.message
-    result.className = 'error'
-  } else {
-    await fetch(
-  'https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send-welcome-email',
-  {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/json',
-      'Authorization': `Bearer ${(await supabase.auth.getSession()).data.session.access_token}`
-    },
-    body: JSON.stringify({
-      email: currentUser.email,
-      name: document.getElementById('imie').value
-    })
-  }
-);
+  if (error) return result.textContent=error.message
 
-window.location.href = 'https://orep.pl/logowanie';
+  // ✅ FIX – pewne pobranie sesji
+  const { data: sessionData } = await supabase.auth.getSession()
 
-  }
+  await fetch(
+    'https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send-welcome-email',
+    {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+        'Authorization': `Bearer ${sessionData.session.access_token}`
+      },
+      body: JSON.stringify({
+        email: currentUser.email,
+        name: imie.value
+      })
+    }
+  )
+
+  location.href='https://orep.pl/logowanie'
 })
 </script>
 </body>
