--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -221,7 +221,12 @@ document.getElementById('close-btn').addEventListener('click', () => {
 
 document.addEventListener('DOMContentLoaded', async () => {
   const { data: { user } } = await supabase.auth.getUser()
-  if (!user) { window.location.href = '/logowanie'; return }
+
+  if (!user) {
+    window.location.href = '/logowanie'
+    return
+  }
+
   currentUser = user
   email.value = user.email
 
@@ -243,24 +248,50 @@ document.addEventListener('DOMContentLoaded', async () => {
 
 document.getElementById('register-form').addEventListener('submit', async e => {
   e.preventDefault()
-  if (!currentUser) { result.textContent = 'Musisz być zalogowany'; result.className='error'; return }
+  if (!currentUser) {
+    result.textContent = 'Musisz być zalogowany'
+    result.className = 'error'
+    return
+  }
 
   loading.style.display = 'block'
   result.textContent = ''
   result.className = ''
 
-  if (nrE.value && nrEPomiary.value) { loading.style.display='none'; result.textContent='Wybierz tylko jeden rodzaj eksploatacji'; result.className='error'; return }
-  if (nrD.value && !nrEPomiary.value) { loading.style.display='none'; result.textContent='Do DOZORU wymagane są pomiary'; result.className='error'; return }
+  if (nrE.value && nrEPomiary.value) {
+    loading.style.display='none'
+    result.textContent='Wybierz tylko jeden rodzaj eksploatacji'
+    result.className='error'
+    return
+  }
+
+  if (nrD.value && !nrEPomiary.value) {
+    loading.style.display='none'
+    result.textContent='Do DOZORU wymagane są pomiary'
+    result.className='error'
+    return
+  }
 
   const allowedTypes = ['application/pdf','image/jpeg','image/png']
   const maxSize = 5*1024*1024
+
   let plikUrls=[]
   for (let i=0;i<plik.files.length;i++) {
     const file = plik.files[i]
-    if (!allowedTypes.includes(file.type) || file.size>maxSize) { loading.style.display='none'; result.textContent='Nieprawidłowy plik'; result.className='error'; return }
+    if (!allowedTypes.includes(file.type) || file.size>maxSize) {
+      loading.style.display='none'
+      result.textContent='Nieprawidłowy plik'
+      result.className='error'
+      return
+    }
     const path = `${currentUser.id}/${Date.now()}_${file.name}`
     const { error } = await supabase.storage.from('uprawnienia').upload(path,file,{upsert:true})
-    if (error) { loading.style.display='none'; result.textContent=error.message; result.className='error'; return }
+    if (error) {
+      loading.style.display='none'
+      result.textContent=error.message
+      result.className='error'
+      return
+    }
     const { data } = await supabase.storage.from('uprawnienia').createSignedUrl(path,3600)
     plikUrls.push(data.signedUrl)
   }
@@ -280,15 +311,33 @@ document.getElementById('register-form').addEventListener('submit', async e => {
   }
 
   loading.style.display='none'
-  if (error) { result.textContent = error.message; result.className = 'error'; return }
+  if (error) {
+    result.textContent = error.message
+    result.className = 'error'
+    return
+  }
 
-  // Wysyłka emaila przez Edge Function (Resend API Key w sekrecie)
-  await fetch('https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send_welcome_email', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ email: currentUser.email, name: document.getElementById('imie').value })
-  })
+  // WYSYŁKA EMAILA – Edge Function obsługuje Resend API Key
+  try {
+    const res = await fetch('https://tfbqqduxtsacvwfigsvt.supabase.co/functions/v1/send_welcome_email', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({
+        email: currentUser.email,
+        name: document.getElementById('imie').value
+      })
+    })
+    if (!res.ok) {
+      const err = await res.text()
+      throw new Error(err || 'Błąd wysyłki emaila')
+    }
+  } catch(err) {
+    result.textContent = 'Nie udało się wysłać emaila powitalnego: ' + err.message
+    result.className = 'error'
+    return
+  }
 
+  // JEŚLI WSZYSTKO OK – REDIRECT
   window.location.href = 'https://orep.pl/logowanie'
 })
 </script>
